Welcome Screen implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TechMarketPlace</string>
+    <string name="welcome_title">Welcome to Tech Market</string>
+    <string name="welcome_desc">Find various kinds of electronic items that are very useful for your needs</string>
+    <string name="continue_btn">Continue</string>
 </resources>
